<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_home"
        android:title="@string/action_home"
        android:icon="@drawable/home"/>
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/search"/>
    <item android:id="@+id/action_add"
        android:title="@string/action_add"
        android:icon="@drawable/add"
        android:iconTintMode=""
        />
    <item android:id="@+id/action_notification"
        android:title="@string/action_notification"
        android:icon="@drawable/heart"
        />
    <item android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:icon="@drawable/profile"/>
</menu>